[package]
name = "SFModManager"
version = "0.0.0"
description = "An installer and mod manager for the RedLoader mod loader."
authors = ["Toni Macaroni"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "http-all", "path-all", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.5"
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = "*"
regex = "*"
winreg = "*"

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
